Update BI skills section to Analytics skills

--- a/index.html
+++ b/index.html
@@ -570,14 +570,80 @@
     </section>
 
     <section>
-      <h2>BI & Analytics Skills</h2>
-      <ul>
-        <li>SAP Profitability and Performance Management (PaPM)</li>
-        <li>SAP BW on HANA</li>
-        <li>SAP BusinessObjects (BOBJ)</li>
-        <li>SAP Analytics Cloud (SAC)</li>
+  <h2>Analytics & Business Intelligence Skills</h2>
+
+  <div class="skills-grid">
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-cogs"></i>
+        SAP Profitability and Performance Management (PaPM)
+        <span class="badge">In Progress</span>
+      </h3>
+      <ul class="project-list">
+        <li><a href="#" target="_blank">PaPM Hands-on Project</a></li>
+        <li><a href="#" target="_blank">Planning and Simulation Scenarios</a></li>
+        <li><a href="#" target="_blank">Cost and Revenue Allocation Models</a></li>
       </ul>
-    </section>
+      <p class="evidence">
+        <a href="#" target="_blank">📄 Documentation</a> ·
+        <a href="#" target="_blank">📁 GitHub</a>
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-database"></i>
+        SAP BW on HANA
+        <span class="badge">In Progress</span>
+      </h3>
+      <ul class="project-list">
+        <li><a href="#" target="_blank">Data Modeling with ADSO</a></li>
+        <li><a href="#" target="_blank">BW-IP Planning Functions</a></li>
+        <li><a href="#" target="_blank">Advanced Query Design</a></li>
+      </ul>
+      <p class="evidence">
+        <a href="#" target="_blank">📄 Documentation</a> ·
+        <a href="#" target="_blank">📁 GitHub</a>
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-chart-bar"></i>
+        SAP BusinessObjects (BOBJ)
+        <span class="badge">In Progress</span>
+      </h3>
+      <ul class="project-list">
+        <li><a href="#" target="_blank">Web Intelligence Reports</a></li>
+        <li><a href="#" target="_blank">Universe Design</a></li>
+        <li><a href="#" target="_blank">Dashboard Integration</a></li>
+      </ul>
+      <p class="evidence">
+        <a href="#" target="_blank">📄 Documentation</a> ·
+        <a href="#" target="_blank">📁 GitHub</a>
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-chart-pie"></i>
+        SAP Analytics Cloud (SAC)
+        <span class="badge">In Progress</span>
+      </h3>
+      <ul class="project-list">
+        <li><a href="#" target="_blank">Interactive Dashboards</a></li>
+        <li><a href="#" target="_blank">Planning Models</a></li>
+        <li><a href="#" target="_blank">Live Data Connections</a></li>
+      </ul>
+      <p class="evidence">
+        <a href="#" target="_blank">📄 Documentation</a> ·
+        <a href="#" target="_blank">📁 GitHub</a>
+      </p>
+    </div>
+
+  </div>
+</section>
 
     <section>
       <h2>Connect With Me</h2>
